--- a/.github/workflows/sync-post.yml
+++ b/.github/workflows/sync-post.yml
@@ -1,8 +1,8 @@
 name: Sync Post
 
 on:
-  issue_comment:
-    types: [created]
+  issues:
+    types: [opened, edited,unpinned]
 
     workflow_dispatch:
 
