--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # visit https://giscus.app to get your Giscus ids
-NEXT_PUBLIC_GISCUS_REPO=
-NEXT_PUBLIC_GISCUS_REPOSITORY_ID=
-NEXT_PUBLIC_GISCUS_CATEGORY=
-NEXT_PUBLIC_GISCUS_CATEGORY_ID=
+NEXT_PUBLIC_GISCUS_REPO= inwindBlog
+NEXT_PUBLIC_GISCUS_REPOSITORY_ID= 699200074
+NEXT_PUBLIC_GISCUS_CATEGORY= 测试
+NEXT_PUBLIC_GISCUS_CATEGORY_ID= 17
 NEXT_PUBLIC_UTTERANCES_REPO=
 NEXT_PUBLIC_DISQUS_SHORTNAME=
 
